Shape key value driver variables of duplicated object sets refer to old objects #52588

Closed
opened 2017-08-30 13:49:22 +02:00 by Konstantins Visnevskis · 5 comments

System Information
Win8.1 x64, 3x gtx580

Blender Version
2.69t2

Short description of error
Normally, when duplicating an object set, relative reference structure between selected objects to be copied is usually preserved. That is - if a pair of objects, one of them having a variable used by other's driver, modifier etc. is duplicated, a new copy points to a variable in a new paired object (duplication of a character or anything having a rig). That seems not to be the case for the drivers of shape key values. A new object still points to original instead of new respective object.

Exact steps for others to reproduce the error

  • Duplicate the selection (empty and a cube)
  • Select and move the old empty in Z.
  • The effect is on respective object's translation, but on shape keys of both objects.

driver.blend

**System Information** Win8.1 x64, 3x gtx580 **Blender Version** 2.69t2 **Short description of error** Normally, when duplicating an object set, relative reference structure between selected objects to be copied is usually preserved. That is - if a pair of objects, one of them having a variable used by other's driver, modifier etc. is duplicated, a new copy points to a variable in a new paired object (duplication of a character or anything having a rig). That seems not to be the case for the drivers of shape key values. A new object still points to original instead of new respective object. **Exact steps for others to reproduce the error** - Duplicate the selection (empty and a cube) - Select and move the old empty in Z. - The effect is on respective object's translation, but on shape keys of both objects. [driver.blend](https://archive.blender.org/developer/F742441/driver.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @KonstantinsVisnevskis

Added subscriber: @KonstantinsVisnevskis
Konstantins Visnevskis changed title from Shape key driver variables of duplicated object sets refer to old objects to Shape key value driver variables of duplicated object sets refer to old objects 2017-08-30 13:58:30 +02:00
Bastien Montagne self-assigned this 2017-08-30 17:23:34 +02:00

This issue was referenced by 29b2a47a8a

This issue was referenced by 29b2a47a8a361d657f2e275b5eebaf412ecafae9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Thank you!

Thank you!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52588
No description provided.