Fix T52588: Shape key value driver variables of duplicated object sets refer to old objects.

Regression since 2.78, to be backported to 2.79.